# Audio-Watermarking-System

./: .gitignore  README.md  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AudioWatermarker.tsx  LandinPage.tsx
server/app/: main.py  models.py  settings.py
server/app/api/: detect.py  embed.py
server/app/core/: inference.py  network.py
server/weights/: detector_best.pth
testing/: 1.py
