[project]
name = "audio-watermarking-pbl2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.34.2",
]
